references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/PortUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:fca6699c4715049c9c50f005803528a7b2b5932c7648da1c0a9cfc73ccfdc751
size 2338
